--- a/index.html
+++ b/index.html
@@ -2,5 +2,10 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <title>你错了吗？错哪了</title>
-   
+    <title>？？</title>
+</head>
+<body>
+    <h1>你错了吗</h1>
+    <p>错哪了</p>
+</body>
+</html>   
